--- a/templates/settings.html
+++ b/templates/settings.html
@@ -158,6 +158,12 @@
             <span>Shopify income tables</span>
           </label>
         </div>
+        <div class="field mb-4">
+          <label class="switch-label">
+            <input type="checkbox" class="switch" name="include_marketing" {% if include_marketing %}checked{% endif %}>
+            <span>Marketing traffic tables</span>
+          </label>
+        </div>
       </div>
       <div class="box mb-4">
         <h3 class="title is-5 mb-3">Display</h3>
